# agentic-cancer-gene-classification

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_fusions.txt
benchmarks/: judge.py  metrics.py  run_benchmark.py
benchmarks/data/: holdout.jsonl
benchmarks/results/: .gitignore  20260630_131502_benchmark_report.json  20260630_134801_benchmark_report.json
scripts/: build_desktop_app.py
src/: cli.py  config.py  main.py  ui_launcher.py
src/evaluation/: __init__.py  metrics.py
src/models/: schema.py
src/pipeline/: citation_precision.py  db_lookups.py  google_sheets_export.py  kinase_curation.py  literature.py  llm_cache.py  llm_client.py  local_agents.py  local_config.py  normalization.py  orchestrator.py  results_export.py  selection.py  synthesis.py
src/static/: app.js  index.html  styles.css
tests/: test_benchmark_report.py  test_citation_precision.py  test_db_lookups.py  test_evaluation_metrics.py  test_kinase_curation.py  test_literature_ncbi_config.py  test_llm_evidence_cache.py  test_local_backends.py  test_metrics.py  test_normalization.py  test_oncokb_lookup.py  test_orchestrator_parallelism.py  test_results_export.py  test_ui_api.py  test_ui_launcher.py
